-merge and -first options in lex_utils

--- a/bin/setup/lang/welcome.htm
+++ b/bin/setup/lang/welcome.htm
@@ -288,6 +288,7 @@ fr: <a href="gwsetup?lang=%l;v=gwdiff.htm">Calcule la différence entre deux bas
 ] (gwdiff)
 
 <li>[
+co: <a href="gwsetup?lang=%l;v=gwfix.htm">Currege una basa è calculeghja torna l’indici</a>
 en: <a href="gwsetup?lang=%l;v=gwfix.htm">Fixes problems in a base</a>
 fr: <a href="gwsetup?lang=%l;v=gwfix.htm">Corrige les problèmes d'une base</a>
 ] (gwfixbase)
