Read translations for .htm files in bin/setup/lang

--- a/bin/setup/lang/gwb2ged.htm
+++ b/bin/setup/lang/gwb2ged.htm
@@ -252,14 +252,14 @@ sv: Förnamn
 ]</td>
 <td><input name="a1" size=30 maxlength=200></td>
 
-<td>N[
-de: r
-en: um
-es: úm
-fr: um
-it: umero
-lv: r
-sv: ummer
+<td>[
+de: Nr
+en: Num
+es: Núm
+fr: Num
+it: Numero
+lv: Nr
+sv: Nummer
 ]</td>
 <td><input name="a2" size=5 maxlength=8></td>
 </tr>
@@ -275,16 +275,7 @@ sv: Efternamn
 ]</td>
 <td colspan=3><input name="a3" size=40 maxlength=200></td>
 </tr>
-
-[
-de: 
-en: 
-es: 
-fr: 
-it: 
-lv: <tr align=left><td> </td><td colspan=3>…vecâkus</td></tr>
-sv: 
-]</table>
+</table>
 <p>
 <table class="setup">
 <tr align=left><td> </td><td colspan=3>
